--- a/.tas.yml
+++ b/.tas.yml
@@ -1,17 +1,25 @@
 ---
-framework: "jest"
-postMerge:
-  pattern:
-    - "./test/unit/*.tsx"
-    - "./test/unit/*.ts"
-    - "./test/*.tsx"
+framework: jest
+licenseTier: xsmall
+postMerge: 
+  pattern: 
+    - "./test/unit/*.test.tsx"
+    - "./test/unit/*.test.ts"
+    - "./test/*.test.tsx"
+  strategy: 
+    threshold: <5|100s|30m|6h>
+    type: <commit|time>
 preMerge:
   pattern:
-    - "./test/unit/*.tsx"
-    - "./test/unit/*.ts"
-    - "./test/*.tsx"
+    - "./test/unit/*.test.tsx"
+    - "./test/unit/*.test.ts"
+    - "./test/*.test.tsx"
 preRun:
-  - yarn install
+     command:
+        - yarn install
+        - yarn run clean
+        - yarn run build
 postRun:
-  - yarn --version
+     command:
+        - yarn --version
 version: 2.0
